# h3d

./: CMakeLists.txt  LICENSE  README.md  demo_scene.cpp  demo_scene.h  glad.c  main.cpp  环境搭建.md
include/GLFW/: glfw3.h  glfw3native.h
include/KHR/: khrplatform.h
include/glad/: glad.h
res/shaders/: unit_color.frag  unit_color.vert
src/: console.h  event.h  mesh.h  meshrender.cpp  meshrender.h  misc.h  object.cpp  object.h  scene_manager.cpp  scene_manager.h  shader.cpp  shader.h  viewer.cpp  viewer.h
src/math/: matrix4x4.h  vector2.h  vector3.h  vector4.h
